display works kinda

--- a/styles.css
+++ b/styles.css
@@ -33,14 +33,52 @@
 .btn {
     border-style: none;
     font-family: 'Montserrat', sans-serif;
-    background-color: #f8f9fa;
+    background-color: #e9ecef;
     color: #495057;
+}
+
+.btn.digit:hover {
+    background-color: #f8f9fa;
+    border: 2px solid #dee2e6;
+    cursor: pointer;
+}
+
+.btn.digit:active {
+    background-color: #343a40;
+    color: #f1f3f5;
+    cursor: pointer;
+}
+
+.btn.oper:hover {
+    /* background-color: #868e96; */
+    border: 2px solid #868e96;
+    /* color: #343a40; */
+    cursor: pointer;
+}
+
+.btn.oper:active {
+    background-color: #e9ecef;
+    border: 2px solid #868e96;
+    color: #495057;
+    cursor: pointer;
+}
+
+.btn.clear:hover {
+    background-color: #ff6b6b;
+    border: 2px solid #fa5252;
+    cursor: pointer;
+}
+
+.btn.clear:active {
+    background-color: #973131;
+    border: 2px solid #e94c4c;
+    cursor: pointer;
 }
 
 .display-text {
     font-family: 'Electrolize', sans-serif;
     font-size: 32px;
-    padding-right: 5px;
+    padding-right: 10px;
 }
 
 .clear {
@@ -62,6 +100,8 @@
     grid-column: 1 / -1;
     align-content: center;
     justify-content: end;
+    width: 190px;
+    overflow: hidden;
 }
 
 .btn, .display, .calculator {
