--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@
 
 .display {
     display: grid;
-    background-color: #e6fcf5;
+    /* background-color: #e6fcf5; */
     color: #495057;
     height: 40px;
     grid-column: 1 / -1;
@@ -102,6 +102,8 @@
     justify-content: end;
     width: 190px;
     overflow: hidden;
+    background: linear-gradient(#c4e4d9 0 10%, #f6fffc, #c4e4d9 90% 100%);
+    box-shadow: inset 0px 1px 2px 1px rgb(0 0 0 / 0.3);
 }
 
 .btn, .display, .calculator {
