--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,17 @@
 
 .btn {
     display: flex;
-    width: 40px;
-    height: 40px;
-    background-color: antiquewhite;
-    /* border: 1px solid red; */
     justify-content: center;
     align-items: center;
+
+    width: 40px;
+    height: 40px;
+
+    font-family: 'Montserrat', sans-serif;
+
+    border-style: none;
+    color: #495057;
+    background-color: #e9ecef;
 }
 
 .calculator {
@@ -30,27 +35,20 @@
     margin-top: 20px;
 }
 
-.btn {
-    border-style: none;
-    font-family: 'Montserrat', sans-serif;
-    background-color: #e9ecef;
-    color: #495057;
-}
-
-.btn.digit:hover {
+/* .btn.digit:hover {
     background-color: #f8f9fa;
     border: 2px solid #dee2e6;
     cursor: pointer;
-}
+} */
 
-.btn.digit:active {
+/* .btn.digit:active {
     background-color: #343a40;
     color: #f1f3f5;
     cursor: pointer;
-}
+} */
 
 .btn.oper:hover {
-    /* background-color: #868e96; */
+    background-color: #868e96;
     border: 2px solid #868e96;
     /* color: #343a40; */
     cursor: pointer;
