--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,8 @@
   box-sizing: border-box;
 }
 
-body {
+html {
   font-size: 62.5%;
-  /* overflow: hidden; */
 }
 
 .btn {
@@ -14,15 +13,34 @@ body {
   justify-content: center;
   align-items: center;
 
-  width: 4rem;
-  height: 4rem;
+  width: 8rem;
+  height: 8rem;
 
   font-family: "Montserrat", sans-serif;
-  font-size: 1.6rem;
+  font-size: 3rem;
 
   border-style: none;
   color: #495057;
   background-color: #e9ecef;
+}
+
+.display {
+  display: flex;
+  justify-content: flex-end;
+  color: #495057;
+  width: 48rem;
+  height: 10rem;
+  overflow: hidden;
+  background: linear-gradient(#c4e4d9 0 10%, #f6fffc, #c4e4d9 90% 100%);
+  box-shadow: inset 0px 1px 2px 1px rgb(0 0 0 / 0.3);
+}
+
+.calculator {
+  background-color: #979fa7;
+  padding: 60px 20px 25px 20px;
+  margin-top: 100px;
+  border-radius: 20px;
+  box-shadow: 2px 4px 3px 1px rgb(0 0 0 / 0.5);
 }
 
 .calculator-container {
@@ -30,22 +48,10 @@ body {
   justify-content: center;
 }
 
-.calculator {
-  /* display: inline-block; */
-  /* display: flex;
-  flex-direction: column; */
-  background-color: #adb5bd;
-  /* width: 26rem; */
-  padding: 60px 20px 25px 20px;
-  margin-top: 100px;
-  border-radius: 20px;
-  box-shadow: 2px 4px 3px 1px rgb(0 0 0 / 0.5);
-}
-
 .btn-grid-container {
   display: grid;
-  grid-template-columns: repeat(5, 4rem);
-  gap: 1rem;
+  grid-template-columns: repeat(5, 8rem);
+  gap: 2rem;
   justify-content: center;
   margin-top: 30px;
 }
@@ -100,17 +106,6 @@ body {
 .btn.equals:hover {
   background-color: #74c0fc;
   border: 2px solid #339af0;
-}
-
-.display {
-  display: flex;
-  justify-content: flex-end;
-  color: #495057;
-  width: 24rem;
-  height: 4rem;
-  overflow: hidden;
-  background: linear-gradient(#c4e4d9 0 10%, #f6fffc, #c4e4d9 90% 100%);
-  box-shadow: inset 0px 1px 2px 1px rgb(0 0 0 / 0.3);
 }
 
 .btn,
