--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ html {
   width: 8rem;
   height: 8rem;
 
-  font-family: "Montserrat", sans-serif;
+  font-family: "Courier Prime";
   font-size: 3rem;
 
   border-style: none;
@@ -25,19 +25,31 @@ html {
 }
 
 .display {
-  display: flex;
-  justify-content: flex-end;
+  display: grid;
+  justify-content: end;
+  align-content: center;
   color: #495057;
-  width: 48rem;
-  height: 10rem;
+  /* width: 48rem; */
+  height: 8rem;
   overflow: hidden;
   background: linear-gradient(#c4e4d9 0 10%, #f6fffc, #c4e4d9 90% 100%);
   box-shadow: inset 0px 1px 2px 1px rgb(0 0 0 / 0.3);
+
+  grid-column: 1 / -1;
+
+  margin-bottom: 1.4rem;
+}
+
+.display-text {
+  font-family: "Electrolize", sans-serif;
+  font-size: 6rem;
+  padding-right: 10px;
+  /* margin-top: 10px; */
 }
 
 .calculator {
   background-color: #979fa7;
-  padding: 60px 20px 25px 20px;
+  padding: 40px 20px 25px 20px;
   margin-top: 100px;
   border-radius: 20px;
   box-shadow: 2px 4px 3px 1px rgb(0 0 0 / 0.5);
@@ -51,9 +63,9 @@ html {
 .btn-grid-container {
   display: grid;
   grid-template-columns: repeat(5, 8rem);
-  gap: 2rem;
+  gap: 1rem;
   justify-content: center;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 .btn.oper:hover {
@@ -80,12 +92,6 @@ html {
   background-color: #973131;
   border: 2px solid #e94c4c;
   cursor: pointer;
-}
-
-.display-text {
-  font-family: "Electrolize", sans-serif;
-  font-size: 3.2rem;
-  padding-right: 10px;
 }
 
 .clear {
